<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF6F00"
    tools:context=".ui.media.MediaFragment">

    <TextView
        android:id="@+id/text_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="655dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText4"
                android:layout_width="353dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:editable="false"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="none"
                android:nestedScrollingEnabled="true"
                android:text="@string/media_text"
                android:background="@null"/>

            <EditText
                android:id="@+id/editText5"
                android:layout_width="353dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:editable="false"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="none"
                android:nestedScrollingEnabled="true"
                android:text="@string/media_text2"
                android:background="@null"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <EditText
                        android:id="@+id/editText10"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:background="@null"
                        android:editable="false"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="none"
                        android:nestedScrollingEnabled="true"
                        android:text="@string/media_name1"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/editText11"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:editable="false"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="none"
                        android:nestedScrollingEnabled="true"
                        android:text="@string/media_name2"
                        android:textAlignment="center"
                        android:background="@null"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <EditText
                        android:id="@+id/editText12"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:background="@null"
                        android:editable="false"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="none"
                        android:nestedScrollingEnabled="true"
                        android:text="@string/media_name1"
                        android:textAlignment="center"
                        android:textColor="#00FFFFFF" />

                    <EditText
                        android:id="@+id/editText13"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:background="@null"
                        android:editable="false"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="none"
                        android:nestedScrollingEnabled="true"
                        android:text="@string/media_name2"
                        android:textAlignment="center"
                        android:textColor="#00FFFFFF" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <EditText
                        android:id="@+id/editText12"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:background="@null"
                        android:editable="false"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="none"
                        android:nestedScrollingEnabled="true"
                        android:text="@string/media_name3"
                        android:textAlignment="center" />

                    <EditText
                        android:id="@+id/editText13"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:background="@null"
                        android:editable="false"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="none"
                        android:nestedScrollingEnabled="true"
                        android:text="@string/media_name4"
                        android:textAlignment="center" />

                </TableRow>

            </TableLayout>

            <EditText
                android:id="@+id/editText14"
                android:layout_width="353dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:editable="false"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="none"
                android:nestedScrollingEnabled="true"
                android:text="@string/media_text3" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>